@@ -1,7 +1,11 @@
 # vim: set noexpandtab:
+
+2013-07-30 Steve
+	* Added jetPtCut arg to Meff methods
+
 2013-07-27 Anyes
-	* Update hasZllZll method to retrn lep idx making Z's
-	
+	* Update hasZllZll method to return lep idx making Z's
+
 2013-07-12 Steve
 	* Added hasZllZll method to SusyNtTools
 
